made some updated changes

--- a/resumegpt.html
+++ b/resumegpt.html
@@ -17,13 +17,13 @@
     </section>
 
     <div class="section-block">
-      <h2>Favorite Places</h2>
+      <h2>Favorite Places to visit</h2>
       <ol>
-        <li>Tokyo, Japan</li>
-        <li>Rome, Italy</li>
-        <li>New York City</li>
-        <li>Paris, France</li>
-        <li>Barcelona, Spain</li>
+        <li>Brooklyn Bridge Park</li>
+        <li>CamelBack Waterpark Resort</li>
+        <li>Kalahari Resorts</li>
+        <li>Florida</li>
+        <li>North Carolina</li>
       </ol>
     </div>
 
@@ -39,18 +39,30 @@
         </thead>
         <tbody>
           <tr>
+            <td>SideKick Chronicles</td>
+            <td>Using the Unity Engine, Me and My Team was able to create a simple 2D game that uses AI control and Pathfinding
+              to simulate a regular 2d platformer. With background music, sound effects and can be played on the browser,
+              any windows device and macbook over 10.15</td>
+            <td>2025</td>
+          </tr>
+          <tr>
             <td>Pong Game</td>
-            <td>Created a Unity-based Pong Game with AI and Multiplayer</td>
+            <td>This Pong game was built in the Unity Engine and has sound effects, background music
+              and can be played against a Computer or a friend on the same computer.</td>
             <td>2024</td>
           </tr>
           <tr>
             <td>Calculator</td>
-            <td>Python calculator for basic operations</td>
+            <td>Using Python I can create a simple Calculator that can compute
+              addition, subtraction, division, and multiplication.</td>
             <td>2023</td>
           </tr>
           <tr>
             <td>Patient System</td>
-            <td>C++ system to manage patient records and billing</td>
+            <td>Using C++ I can make a database/list of patient information 
+              and using an ID system, you can add or delete as well as change the 
+              status of the Patient as well as their condition. With the ability to print 
+              the bill for the patient.</td>
             <td>2024</td>
           </tr>
         </tbody>
@@ -62,6 +74,7 @@
       <div class="contact-item"><a href="https://github.com/ItzDJYP">GitHub</a></div>
       <div class="contact-item"><a href="https://www.linkedin.com/in/patrickhayejr/">LinkedIn</a></div>
       <div class="contact-item"><a href="mailto:patrickhaye11@gmail.com">Email</a></div>
+      <div class="contact-item"><a href="https://itzdjyp.itch.io">Itch.io</a></div>
     </section>
 
     <section>
