--- a/resume.html
+++ b/resume.html
@@ -74,6 +74,7 @@
       <div class="contact-item"><a href="https://github.com/ItzDJYP">GitHub</a></div>
       <div class="contact-item"><a href="https://www.linkedin.com/in/patrickhayejr/">LinkedIn</a></div>
       <div class="contact-item"><a href="mailto:patrickhaye11@gmail.com">Email</a></div>
+      <div class="contact-item"><a href="https://www.patrickhwebdev.com">Portfolio Website</a></div>
       <div class="contact-item"><a href="https://itzdjyp.itch.io">Itch.io</a></div>
     </section>
 
