--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Patrick Haye</h1>
+  <h1>Patrick Haye Jr</h1>
   <img src="images/profile picture.jpg" alt="Profile Photo">
 
   <div id="main-content">
